--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+/target
+/classes
+/checkouts
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+*.iml
+*.idea
+releases
+/tmp
 README.html
+*.app
+README.pdf
+README.tex
+doc/
